# esoteric_cpp

./: README.md  modules_list.txt
shared_ptr_tree/: CMakeLists.txt  shared_ptr_tree.cpp  shared_ptr_tree.h
shared_ptr_tree/shared_ptr_tree_test/: CMakeLists.txt  shared_ptr_tree_test.cpp
smart_tree/: CMakeLists.txt  README.md  smart_tree.cpp  smart_tree.h
smart_tree/smart_tree_test/: CMakeLists.txt  smart_tree_test.cpp
